[tool.poetry]
name = "better-proxy"
version = "1.3.0"
description = "Better proxy!"
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/alenkimov/better_proxy"
packages = [{include = "better_proxy"}]

[tool.poetry.urls]
"Source" = "https://github.com/alenkimov/better_proxy"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">=1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
